[project]
name = "react-agent"
version = "0.0.1"
description = "Starter template for making a custom Reasoning and Action agent (using tool calling) in LangGraph."
authors = [
    { name = "William Fu-Hinthorn", email = "13333726+hinthornw@users.noreply.github.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11.0,<4.0"


[tool.poetry.dependencies]
langgraph = ">=0.2.6"
langchain-openai = ">=0.3.3"
langchain-anthropic = ">=0.3.0"
langchain-aws = ">=0.2.10"
langchain = ">=0.3.0"
langchain-fireworks = ">=0.2.7"
python-dotenv = ">=1.0.1"
langchain-community = ">=0.3.1"
tavily-python = ">=0.3.1"
agentic-idp-cyberark = {version=">=0.0.1", source="testpypi"}
langgraph-cli = "^0.1.70"
langgraph-api = "^0.0.22"


[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
priority = "explicit"